fixed poster visibility

--- a/src/style.css
+++ b/src/style.css
@@ -370,7 +370,7 @@ transform:scale(1.05);
 
 }
 
-@media(max-width:1200px){
+@media(max-width:900px){
 
 .side-ads{
 
